Remove duplicated rows in the harvest report table

--- a/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
@@ -121,7 +121,8 @@
                     let timestampStart = dayjs(this.reportStartDate).unix();
                     let timestampEnd = dayjs(this.reportEndDate).unix();
                     let request = "/log.json?type=farm_harvest&timestamp[ge]=" + timestampStart + "&timestamp[le]=" + timestampEnd;
-
+                    
+                    this.result = [];
                     getAllPages(request, this.result)
                          .then(() => {})
                          .catch((error) => {
