--- a/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
@@ -42,7 +42,7 @@
                 <li><b>Crop:</b>{{reportCrop}}</li>
             </ul>
             <table border="1">
-                <tr v-if="reportLogs.length!=0">
+                <tr v-if="harvestReportRows.length!=0">
                     <th>Row</th>
                     <th>Date</th>
                     <th>Area</th>
@@ -51,7 +51,7 @@
                     <th>Units</th>
                 </tr>
                 <tr v-else>No matching records</tr>
-                <tr v-for="(log,index) in reportLogs">
+                <tr v-for="(log,index) in harvestReportRows">
                     <td>{{index+1}}</td>
                     <td >{{log.date}}</td>
                     <td>{{log.area}}</td>
@@ -91,7 +91,6 @@
             },
             methods: {
                 generateReport: function(){
-                    this.reportLogs.push({ date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12",units:"Bunches"});
                     axios.get('/farm.json')  // this line sends the request.
                         .then((response) => {
                             this.farm=response.data.name;
@@ -104,10 +103,7 @@
                         })
                     let timestampStart = dayjs(this.reportStartDate).unix();
                     let timestampEnd = dayjs(this.reportEndDate).unix();
-                    console.log(timestampStart)
-                    console.log(timestampEnd)
                     datedRequest= "/log.json?type=farm_harvest&timestamp[ge]="+timestampStart+"&timestamp[le]="+timestampEnd
-                    console.log(datedRequest)
                     getAllPages(datedRequest, this.datedLogs)
                         .then(() => {
 
@@ -122,7 +118,22 @@
             computed: {
                 cropNames(){
                     this.crops=Array.from(this.idToCropMap.values())
-                }
+                },
+                harvestReportRows() {
+                    let tableRows = []
+                    for(let log of this.datedLogs) {
+                        let tableRow = {
+                            date: dayjs.unix(log.timestamp).format('DD/MM/YYYY'),
+                            area: log.area[0].name,
+                            yield: log.quantity[0].value,
+                            units: log.quantity[0].unit.name,
+                            crop: this.idToCropMap.get(log.data.crop_tid)
+                        }
+                        tableRows.push(tableRow)
+                    }
+                    return tableRows
+                },
+
             },
 
 
