Populate the Harvest Report table

--- a/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
@@ -45,7 +45,7 @@
         </ul>
         <br>
         <table border="1">
-            <tr v-if="harvestLogs.length !== 0">
+            <tr v-if="harvestReportRows.length !== 0">
                 <th>Row</th>
                 <th>Date</th>
                 <th>Area</th>
@@ -54,7 +54,7 @@
                 <th>Units</th>
                 <th>Delete</th>
             </tr>
-            <tr v-for="(log,index) in harvestLogs">
+            <tr v-for="(log,index) in harvestReportRows">
                 <td>{{ index + 1}}</td>
                 <td>{{ log.date }}</td>
                 <td>{{ log.area }}</td>
@@ -64,7 +64,7 @@
                 <td><button type="button" @click="deleteRow">Delete</button></td>
             </tr>
         </table>
-        <p v-if="harvestLogs.length === 0">There are no matching records!</p>
+        <p v-if="harvestReportRows.length === 0">There are no matching records!</p>
     </div>
 
     <script>
@@ -90,6 +90,20 @@
                 areaNames() {
                     return Array.from(this.idToAreaMap.values());
                 },
+                harvestReportRows() {
+                    let tableRows = [];
+                    for (let log of this.result) {
+                        let tableRow = {
+                            date: dayjs.unix(log.timestamp).format("MM/DD/YYYY"),
+                            area: log.area[0].name,
+                            yield: log.quantity[0].value,
+                            units: log.quantity[0].unit.name,
+                            crop: this.idToCropMap.get(log.data.crop_tid),
+                        }
+                        tableRows.push(tableRow);
+                    }
+                    return tableRows;
+                }
             },
             methods: {
                 generateReport: function() {
@@ -103,9 +117,6 @@
                             console.log("Error Occurred");
                             console.log(error);
                          })
-                         this.farm = "Sample Farm";
-                         this.user = "manager2";
-                         this.language = "English";
                     
                     let timestampStart = dayjs(this.reportStartDate).unix();
                     let timestampEnd = dayjs(this.reportEndDate).unix();
