--- a/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
@@ -100,7 +100,9 @@
                             units: log.quantity[0].unit.name,
                             crop: this.idToCropMap.get(log.data.crop_tid),
                         }
-                        tableRows.push(tableRow);
+                        if (tableRow.crop === this.reportCrop) {
+                            tableRows.push(tableRow);
+                        }
                     }
                     return tableRows;
                 }
@@ -122,10 +124,6 @@
                     let timestampEnd = dayjs(this.reportEndDate).unix();
                     let request = "/log.json?type=farm_harvest&timestamp[ge]=" + timestampStart + "&timestamp[le]=" + timestampEnd;
 
-                    console.log(timestampStart);
-                    console.log(timestampEnd);
-                    console.log(request);
-
                     getAllPages(request, this.result)
                          .then(() => {})
                          .catch((error) => {
@@ -140,7 +138,6 @@
             created() {
                 getIDToCropMap()
                 .then((cropMap) => {
-                    console.log(cropMap);
                     this.idToCropMap = cropMap;
                 })
                 .catch((error) => {
@@ -149,7 +146,6 @@
                 });
                 getIDToAreaMap()
                 .then((areaMap) => {
-                    console.log(areaMap);
                     this.idToAreaMap = areaMap;
                 })
                 .catch((error) => {
