--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
@@ -14,14 +14,12 @@
      
      <div>
      <label for="startdate">Start:</label>
-     <input type="date" id="startdate" name="start_date"
-            v-model ="startDate" min="2014-01-01" max="2022-01-01" />
 
+     <input type="date" id="startdate" :min="minStartDate" :max="endDate"
+     v-model="startDate"/>
+     <input type="date" id="enddate" :min="startDate" max="maxEndDate"
+     v-model="endDate"/>
      
-     <label for="endDate">End:</label>
-        <input type="date" id="endDate" name="end_date"
-            v-model ="endDate"  min="2020-05-05" max="2022-01-01" />
-     </div>
      <br>
      <br>
      <label for="crops">Crop:</label>
@@ -83,6 +81,10 @@
           title: "My Sample Harvest Report",
           startDate: "2020-05-05",
           endDate: "2020-05-15",
+          minStartDate: "2014-01-01",
+          maxStartDate: "2022-01-01",
+          minEndDate: "2020-05-05",
+          maxEndDate: "2022-01-01",
           crops: ["Kale", "Peas", "Broccoli"],
           areas: ["All", "Chuau-1", "SQ7"],
           rowNum: 1,
